--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,14 @@ body {
     font-family: 'Inconsolata', 'Courier New', Courier, monospace;
 
     font-size: 20px;
+
+    padding: 1em;
 }
 
 h1 {
     font-size: 4em;
     text-align: center;
-    margin: 0 0 30px;
+    margin: 30px 0 30px;
     line-height: 1em;
     color: royalblue;
 
@@ -43,9 +45,8 @@ h1.active {
 
 .content {
     max-width: 1000px;
-    margin: 30px auto;
+    margin: 0 auto;
 
-    padding: 1em;
 }
 
 .controls {
@@ -57,9 +58,10 @@ h1.active {
 button, input {
     display: block;
     border-radius: 2px;
+    padding: 5px 10px;
 }
 button {
-    padding: 5px 10px;
+    
     background-color: royalblue;
     border: none;
     cursor: pointer;
@@ -75,7 +77,6 @@ button:hover {
 input {
     background: #222;
     color: #ccc;
-    padding: 5px 10px;
     margin-left: 50px;
     border: none;
     transition: background 0.15s;
@@ -104,7 +105,6 @@ input:focus {
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     padding: 10px 0;
-    font-style: italic;
 }
 
 .split:first-child {
@@ -120,6 +120,10 @@ input:focus {
     font-weight: bold;
 }
 
+.duration, .timestamp {
+    font-style: italic;
+}
+
 .split {
     animation: fadeIn 1s ease-out;
     line-height: 1em;
@@ -132,7 +136,7 @@ input:focus {
 }
 
 .break {
-    background: rgb(32, 0, 60);
+    background: rgb(20, 0, 40);
     border-color:purple;
     color: purple;
 }
@@ -141,4 +145,27 @@ input:focus {
     background: rgb(45, 33, 3);
     color: goldenrod;
     border-color:goldenrod;
+}
+
+
+@media screen and (width < 800px) {
+    .controls {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    button:first-child, input {
+        grid-column: span 2;
+    }
+    button, input {
+        width: 100%;
+        margin: 0;
+        padding: 10px 10px;
+    }
+    .split {
+        grid-template-columns: 30px 1fr 1fr 100px;
+    }
+
+    .hide {
+        display: none;
+    }
 }
