--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+    font-size: 20px;
+}
 
 body {
-    background: #0a0a0a;
+    --bg-colour: #080808;
+    background: var(--bg-colour);
     color: #eee;
 
     font-family: 'Inconsolata', 'Courier New', Courier, monospace;
-
-    font-size: 20px;
-
-    padding: 1em;
 }
 
 h1 {
@@ -24,6 +25,8 @@ h1 {
 h1.active {
     opacity: 0.4;
     animation: tick 1s ease-in-out infinite alternate;
+
+    cursor: default;
 }
 
 h1.active:hover {
@@ -33,9 +36,9 @@ h1.active:hover {
 
 @keyframes tick {
     0% {
-        opacity: #4169e1aa;
+        opacity: #4169e199;
     }
-    50% {
+    60% {
         color: #4169e1;
     }
     100% {
@@ -53,6 +56,14 @@ h1.active:hover {
     display: flex;
     justify-content: center;
     gap: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+    background-color: var(--bg-colour);
+    padding: 5px 0;
+    box-shadow: 0 0 10px var(--bg-colour);
+
+    padding: 0.75em;
 }
 
 button, input {
@@ -61,29 +72,57 @@ button, input {
     padding: 5px 10px;
 }
 button {
-    
+    font-weight: bold;
     background-color: royalblue;
     border: none;
     cursor: pointer;
-    transition: background 0.25s, color 0.25s, filter 1s;
+    transition: background 0.25s, color 0.25s, filter 1s, transform 0.25s;
+
+    overflow: hidden;
+}
+
+#start {
+    margin-right: 50px;
+}
+#start.active b {
+    animation: blastOff 1s forwards;
+}
+
+@keyframes blastOff {
+    0% { transform: translate(0, 0);}
+    40% { transform: translate(-5px, 5px);}
+    100% { transform: translate(50px, -50px);}
 }
 
 button:disabled {
-    /* background: #555;
-    color: #222; */
-    filter: grayscale(1)
+    animation: hideAway 1.75s 1s ease-in-out forwards;
+}
+@keyframes hideAway {
+    to {
+        padding: 0;
+        font-size: 0;
+        opacity: 0;
+        margin-right: -10px;
+    }
+}
+
+button b {
+    display: inline-block;
+    transition: transform 1s;
 }
 
 button:hover {
     background-color: rgb(140, 169, 255);
     color: black;
-
+    transform: scale(1.1);
+}
+button:hover b {
+    transform: scale(1.1);
 }
 
 input {
-    background: #222;
+    background: #1c1c1c;
     color: #ccc;
-    margin-left: 50px;
     border: none;
     transition: background 0.15s;
     flex-grow: 1;
@@ -103,21 +142,23 @@ input:focus {
 
 .splits {
     margin-top: 40px;
+    padding: 1.25em;
 }
 .split {
     color: #aaa;
-    background-color: #111;
+    background-color: #0e0e0e;
     display: grid;
     grid-template-columns: 50px 2fr 3fr 150px;
     border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
     padding: 10px 0;
 }
 
 .split:first-child {
-    background-color: #222;
+    background-color: transparent;
+    border-bottom: 3px solid #444;
     color: white;
     font-style: normal;
+    border-left: none;
 }
 
 .id {
@@ -143,33 +184,46 @@ input:focus {
 }
 
 .break {
-    background: rgb(20, 10, 40);
-    border-color:rgb(161, 35, 161);
-    color: rgb(161, 35, 161);
+    /* background: rgb(20, 10, 40); */
+    /* border-color:goldenrod; */
+    color: goldenrod;
+}
+
+.complete {
+    /* background: rgb(10, 40, 20); */
+    border-color: rgb(35, 161, 41);
+    color: rgb(35, 161, 41);
 }
 
 .start {
-    background: rgb(45, 33, 3);
-    color: goldenrod;
-    border-color:goldenrod;
+    /* background: rgb(45, 33, 3); */
+    color: royalblue;
+    /* border-color:goldenrod; */
 }
 
 
 @media screen and (width < 800px) {
     .controls {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
     button:first-child, input {
-        grid-column: span 2;
+        grid-column: span 3;
     }
     button, input {
         width: 100%;
         margin: 0;
-        padding: 10px 10px;
+        padding: 8px;
     }
     .split {
-        grid-template-columns: 30px 1fr 1fr 100px;
+        grid-template-columns: 1fr 1fr 100px;
+    }
+
+    .id {
+        display: none;
+    }
+    .name {
+        padding-left: 0.5em;
     }
 
     .hide {
