--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,12 @@ h1.active:hover {
     }
 }
 
+h2 {
+    text-align: center;
+    margin-bottom: 0.5em;
+    color: #888;
+}
+
 .content {
     max-width: 1000px;
     width: 100%;
@@ -74,7 +80,6 @@ h1.active:hover {
     top: 0;
     z-index: 99;
     background-color: var(--bg-colour);
-    padding: 5px 0;
     box-shadow: 0 0 10px var(--bg-colour);
 
     padding: 0.75em;
@@ -265,7 +270,21 @@ input:focus {
     background-color: #1a1a1a;
 }
 
+.stats {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    justify-content: center;
+    color: #aaa;
+    padding: 0 1em;
+}
 
+.stat {
+    background: #111;
+    box-shadow: 0 0 3px black;
+    padding: 3px 10px;
+    border-radius: 10px;
+}
 
 /* MARK: @media < 800px 
  */
@@ -299,10 +318,30 @@ input:focus {
 /* MARK: @media < 500px 
  */
 @media screen and (width < 500px) {
+
+    .splits {
+        padding: 1.25em 0;
+        margin: 0;
+    }
     .split {
         grid-template-columns: 1fr 90px;
     }
     .timestamp {
         display: none;
+    }
+
+    .stats {
+        gap: 0;
+        background: #111;
+        padding: 20px 10px;
+        margin-top: 40px;
+    }
+    .stat {
+        box-shadow: none;
+        border-radius: 0;
+        display: grid;
+        grid-template-columns: 2fr auto 1fr;
+        column-gap: 1em;
+        width: 100%;
     }
 }
