--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ footer {
     padding: 1em;
 }
 
+
+/* MARK: TIMER
+ */
 h1 {
     font-size: 4em;
     text-align: center;
@@ -59,11 +62,66 @@ h1.active:hover {
     }
 }
 
+
+/* MARK: Edit Split
+ */
+#editSplit {
+    display: grid;
+    justify-content: center;
+    align-content: start;
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    padding: 5%;
+
+    background-color: #000c;
+    z-index: 999;
+
+    transition: opacity 0.5s;
+}
+
+.card {
+    background-color: #0a0a0a;
+    padding: 2em 3em 3em;
+    border-radius: 1em;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.5em;
+}
+
+.card input, .card select {
+    margin-bottom: 1em;
+    width: 100%;
+    height: 2em;
+}
+
+.card button {
+    margin-top: 2em;
+}
+
+.editSplit__buttons, .editSplit__details {
+    display: flex;
+    gap: 1em;
+    justify-content: center;
+}
+
+
 h2 {
     text-align: center;
-    margin-bottom: 0.5em;
+    margin: 0 0 1em;
     color: #888;
 }
+
+#editSplit.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
 
 .content {
     max-width: 1000px;
@@ -207,6 +265,11 @@ input:focus {
     padding: 10px;
 }
 
+.split:hover {
+    background-color: #333;
+    cursor: pointer;
+}
+
 .split:first-child {
     background-color: transparent;
     border-bottom: 3px solid #444;
@@ -214,6 +277,7 @@ input:focus {
     font-style: normal;
     border: none;
     padding: 10px 15px;
+    cursor: default;
 }
 
 .id {
@@ -311,6 +375,13 @@ input:focus {
 
     .hide {
         display: none;
+    }
+
+    .card {
+        padding: 1em 2em 2em;
+    }
+    .editSplit__details {
+        flex-direction: column;
     }
 }
 
